[package]
name = "rustnes"
version = "0.1.0"
authors = ["Pietro Atzeni <pietrino.atzeni@gmail.com>"]
edition = "2018"

[dependencies]
clap = "*"
colored = "*"
num_enum = "*"
rand = "*"
log = "*"
env_logger = { version = "*", features = ["termcolor"] }
crossterm = "*"

[dev-dependencies]
hamcrest2 = "*"
