[package]
name = "app"
version = "0.1.0"
authors = ["Pietro Atzeni <pietrino.atzeni@moneyfarm.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "*"
log = "*"
iced = "0.1.1"
#rust-pushrod = "*"
#sdl2 = "*"
rustnes-lib = { path = "../lib" }