[package]
name = "rustnes-app"
version = "0.1.0"
authors = ["Pietro Atzeni <pietrino.atzeni@moneyfarm.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#orbtk = { git = "https://github.com/redox-os/orbtk.git", branch = "develop" }
#fltk = "^0.9"
env_logger = "*"
log = "*"
iced = { version = "*", features = ["canvas", "async-std", "debug", "image"] }
iced_native = "*"
chrono = "0.4"
async-std = { version = "1.0", features = ["unstable"] }
rustnes-lib = { path = "../lib" }